--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Storix</title>
-    <link rel="icon" href="/icon" />
+    <link rel="icon" href="/icon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
